--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/estilos.css">
+    <link rel="stylesheet" href="http://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css">
     <!-- endbuild -->
   </head>
   <body>
@@ -31,7 +32,7 @@
             <span class="icon-bar"></span>
           </button>
 
-          <a href="#/">
+          <a href="https://www.mutualdeseguros.cl/">
             <figure class="contenedorLogo enLinea">
               <img src="images/logo.png" alt="">
             </figure>
@@ -42,25 +43,42 @@
           <ul class="nav navbar-nav">
             <li class="active"><a class="botonMenu" href="/"><span>Inicio</span></a></li>
             <li><a class="botonMenu" href="papa-seguro.html"><span>Seguro Papá</span></a></li>
-            <li><a class="botonMenu" href="#/"><span>Cobertura Oncológica</span></a></li>
           </ul>
         </nav>
       </header>
       <div class="carousel slide carrusel" id="carrusel">
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <div class="imagenCarrusel" style="background-image:url(images/foto1.png)"></div>
+            <div class="imagenCarrusel" style="background-image:url(images/foto-1.png); background-position: center;"></div>
+            <div class="carousel-caption textoEntrada">
+              <h2>
+                Cuidamos de ti, para que disfrutes la vida con quienes más amas.
+              </h2>
+            </div>
           </div>
           <div class="item">
-             <div class="imagenCarrusel" style="background-image:url(images/foto2.png)"></div>
+             <div class="imagenCarrusel" style="background-image:url(images/foto-2.png); background-position: center;"></div>
+             <div class="carousel-caption textoEntrada">
+               <h2>
+                 Verlos triunfar en la vida, es el mayor anhelo de un padre, ¡asegúrate hoy!
+               </h2>
+             </div>
+          </div>
+          <div class="item">
+             <div class="imagenCarrusel" style="background-image:url(images/foto-3.png); background-position: center top;"></div>
+             <div class="carousel-caption textoEntrada">
+               <h2>
+                 Seguro papá, Mutual de Seguros de Chile
+               </h2>
+             </div>
           </div>
         </div>
         <a class="left carousel-control" href="#carrusel" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <i class="fa fa-angle-double-left"></i>
           <span class="sr-only">Previous</span>
         </a>
         <a class="right carousel-control" href="#carrusel" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <i class="fa fa-angle-double-right"></i>
           <span class="sr-only">Next</span>
         </a>
       </div>
@@ -71,7 +89,7 @@
         <div class="jumbotron">
           <div class="descripcion">
             <p>
-              <span class="capitular rojitoColor">S</span>eguro Papá es un seguro de vida diseñado especialmente para el Papá y sus hijos. Puede ser contratado en plazos renovables de 5, 10, 15 y 20 años o vitalicio. Permite la incorporación de cláusulas adicionales para los hijos, tales como Cobertura de Reembolso de Gastos Funerarios y Cláusula de Ayuda Educacional.
+              <span class="resalta">Seguro <span class="azulClaro">Papá</span></span> es un seguro de vida diseñado especialmente para el Papá y sus hijos. Puede ser contratado en plazos renovables de 5, 10, 15 y 20 años o vitalicio. Permite la incorporación de cláusulas adicionales para los hijos, tales como Cobertura de Reembolso de Gastos Funerarios y Cláusula de Ayuda Educacional.
             </p>
             <p>
               Además, entrega la opción de contratar una Cobertura Oncológica al Papá, por medio de un convenio con el Instituto de Radio Medicina de Chile IRAM.
@@ -98,7 +116,7 @@
           <p><span class="destacadoFooter">Desde celulares</span> (32) 2326707</p>
         </div>
         <div class="fotosFooter pull-right">
-          <img src="images/otros.png" alt="">
+          <img src="images/logo-defensor-asegurado-1.png" alt="">
         </div>
       </footer>
 
