--- a/app/papa-seguro.html
+++ b/app/papa-seguro.html
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
           </button>
 
-          <a href="#/">
+          <a href="https://www.mutualdeseguros.cl/">
             <figure class="contenedorLogo enLinea">
               <img src="images/logo.png" alt="">
             </figure>
@@ -40,19 +40,21 @@
         </div>
         <nav class="collapse navbar-collapse" id="js-navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a class="botonMenu" href="/"><span>Inicio</span></a></li>
-            <li><a class="botonMenu" href="papa-seguro.html"><span>Seguro Papá</span></a></li>
-            <li><a class="botonMenu" href="#/"><span>Cobertura Oncológica</span></a></li>
+            <li><a class="botonMenu" href="/"><span>Inicio</span></a></li>
+            <li class="active"><a class="botonMenu" href="papa-seguro.html"><span>Seguro Papá</span></a></li>
           </ul>
         </nav>
       </header>
       <div class="carousel slide carrusel" id="carrusel">
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <div class="imagenCarrusel" style="background-image:url(images/foto1.png)"></div>
+            <div class="imagenCarrusel" style="background-image:url(images/foto-1.png); background-position: center;"></div>
           </div>
           <div class="item">
-             <div class="imagenCarrusel" style="background-image:url(images/foto2.png)"></div>
+             <div class="imagenCarrusel" style="background-image:url(images/foto-2.png); background-position: center;"></div>
+          </div>
+          <div class="item">
+             <div class="imagenCarrusel" style="background-image:url(images/foto-3.png); background-position: center top;"></div>
           </div>
         </div>
         <a class="left carousel-control" href="#carrusel" role="button" data-slide="prev">
@@ -127,7 +129,7 @@ educación de su hijo, ante el fallecimiento del titular (cobertura válida hast
             </div>
             <div class="tab-pane contentTab" id="yellow">
                 <h2>Medios de Pago</h2>
-                <ul class="listaGris">
+                <ul>
                   <li>Descuento por planilla</li>
                   <li>Pago Automático de Cuentas (PAC)</li>
                   <li>Pago Automático con Tarjetas de Crédito (PAT)</li>
@@ -231,7 +233,7 @@ ahorro)</td>
           <p><span class="destacadoFooter">Desde celulares</span> (32) 2326707</p>
         </div>
         <div class="fotosFooter pull-right">
-          <img src="images/otros.png" alt="">
+          <img src="images/logo-defensor-asegurado-1.png" alt="">
         </div>
       </footer>
 
