--- a/app/papa-seguro.html
+++ b/app/papa-seguro.html
@@ -58,11 +58,11 @@
           </div>
         </div>
         <a class="left carousel-control" href="#carrusel" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <i class="fa fa-angle-double-left"></i>
           <span class="sr-only">Previous</span>
         </a>
         <a class="right carousel-control" href="#carrusel" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <i class="fa fa-angle-double-right"></i>
           <span class="sr-only">Next</span>
         </a>
       </div>
