--- a/app/papa-seguro.html
+++ b/app/papa-seguro.html
@@ -10,7 +10,6 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -59,11 +58,11 @@
           </div>
         </div>
         <a class="left carousel-control" href="#carrusel" role="button" data-slide="prev">
-          <i class="fa fa-angle-double-left"></i>
+          <img class="fotoLeft" src="images/left.png" alt="">
           <span class="sr-only">Previous</span>
         </a>
         <a class="right carousel-control" href="#carrusel" role="button" data-slide="next">
-          <i class="fa fa-angle-double-right"></i>
+          <img class="fotoRight" src="images/right.png" alt="">
           <span class="sr-only">Next</span>
         </a>
       </div>
