--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,11 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link href="styles/video-js.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/estilos.css">
     <!-- endbuild -->
   </head>
@@ -117,7 +117,14 @@
               </div>
               <div class="modal-body">
                 <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/NA8UWGa0aaE" frameborder="0" allowfullscreen></iframe>
+                  <!-- <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/NA8UWGa0aaE" frameborder="0" allowfullscreen></iframe> -->
+                  <video id="example_video_1" class="video-js vjs-default-skin"
+                    controls preload="auto" width="640" height="264"
+                   
+                    data-setup='{"example_option":true}'>
+                   <source src="video/P.LED_PAPA_SEGURO_V2.2.mp4" type='video/mp4' />
+                   <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
+                  </video>
                 </div>
               </div>
             </div>
@@ -175,6 +182,7 @@
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
-
+        
+        <script src="scripts/video.js"></script>
 </body>
 </html>
