links abren otra ventana

--- a/app/papa-seguro.html
+++ b/app/papa-seguro.html
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
           </button>
 
-          <a href="https://www.mutualdeseguros.cl/">
+          <a href="https://www.mutualdeseguros.cl/" target="_blank">
             <figure class="contenedorLogo enLinea">
               <img src="images/logo.png" alt="">
             </figure>
@@ -231,7 +231,9 @@ ahorro)</td>
           <p><span class="destacadoFooter">Desde celulares</span> (32) 2326707</p>
         </div>
         <div class="fotosFooter pull-right">
+          <a href="http://www.ddachile.cl/home.asp" target="_blank">
           <img src="images/logo-defensor-asegurado-1.png" alt="">
+        </a>
         </div>
       </footer>
 
