--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
           </button>
 
-          <a href="https://www.mutualdeseguros.cl/">
+          <a href="https://www.mutualdeseguros.cl/" target="_blank">
             <figure class="contenedorLogo enLinea">
               <img src="images/logo.png" alt="">
             </figure>
@@ -143,7 +143,9 @@
         <p><span class="destacadoFooter">Desde celulares</span> (32) 2326707</p>
       </div>
       <div class="fotosFooter pull-right">
-        <img src="images/logo-defensor-asegurado-1.png" alt="">
+        <a href="http://www.ddachile.cl/home.asp" target="_blank">
+          <img src="images/logo-defensor-asegurado-1.png" alt="">
+        </a>
       </div>
     </footer>
 
