--- a/app/index.html
+++ b/app/index.html
@@ -91,13 +91,11 @@
             <p>
               <span class="resalta">Seguro <span class="azulClaro">Papá</span></span> es un seguro de vida diseñado especialmente para el Papá y sus hijos. Puede ser contratado en plazos renovables de 5, 10, 15 y 20 años o vitalicio. Permite la incorporación de cláusulas adicionales para los hijos, tales como Cobertura de Reembolso de Gastos Funerarios y Cláusula de Ayuda Educacional.
             </p>
-            <p>
-              Además, entrega la opción de contratar una Cobertura Oncológica al Papá, por medio de un convenio con el Instituto de Radio Medicina de Chile IRAM.
-            </p>
+  
           </div>
         </div>
         <aside class="descargas">
-          <a class="adjunto" href="#">
+          <a class="adjunto" href="adjuntos/seguropapa.pdf" target="_blank">
             <span>Nombre de Archivo</span>
             <img src="images/pdf.png" alt="">
           </a>  
