--- a/app/index.html
+++ b/app/index.html
@@ -141,9 +141,7 @@
         <p><span class="destacadoFooter">Desde celulares</span> (32) 2326707</p>
       </div>
       <div class="fotosFooter pull-right">
-        <a href="http://www.ddachile.cl/home.asp" target="_blank">
-          <img src="images/logo-defensor-asegurado-1.png" alt="">
-        </a>
+        <a href="mailto:agregacontacto@mutualdeseguros.cl">agregacontacto@mutualdeseguros.cl</a>
       </div>
     </footer>
 
