--- a/app/papa-seguro.html
+++ b/app/papa-seguro.html
@@ -238,7 +238,7 @@ educación de su hijo, ante el fallecimiento del titular (cobertura válida hast
           <p><span class="destacadoFooter">Desde celulares</span> (32) 2326707</p>
         </div>
         <div class="fotosFooter pull-right">
-          <a href="mailto:agregacontacto@mutualdeseguros.cl">agregacontacto@mutualdeseguros.cl</a>
+          <a href="mailto:agregacontacto@mutualdeseguros.cl"><span class="destacadoFooter">contacto</span>@mutualdeseguros.cl</a>
         </div>
       </footer>
 
