fotos nuevas links arreglados

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
       <div class="carousel slide carrusel" id="carrusel">
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <div class="imagenCarrusel" style="background-image:url(images/foto-1.png); background-position: center;"></div>
+            <div class="imagenCarrusel" style="background-image:url(images/foto-1.jpg); background-position: center;"></div>
             <div class="carousel-caption textoEntrada">
               <h2>
                 Cuidamos de ti, para que <span>disfrutes la vida</span> con quienes más amas.
@@ -57,7 +57,7 @@
             </div>
           </div>
           <div class="item">
-             <div class="imagenCarrusel" style="background-image:url(images/foto-2.png); background-position: center;"></div>
+             <div class="imagenCarrusel" style="background-image:url(images/foto-2.jpg); background-position: center;"></div>
              <div class="carousel-caption textoEntrada">
                <h2>
                  Verlos triunfar en la vida, es el mayor <span>anhelo de un padre,</span> ¡asegúrate hoy!
@@ -65,7 +65,7 @@
              </div>
           </div>
           <div class="item">
-             <div class="imagenCarrusel" style="background-image:url(images/foto-3.png); background-position: center top;"></div>
+             <div class="imagenCarrusel" style="background-image:url(images/foto-3.jpg); background-position: center top;"></div>
              <div class="carousel-caption textoEntrada">
                <h2>
                  <span>Seguro papá</span>, Mutual de Seguros de Chile
