--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
              <div class="imagenCarrusel" style="background-image:url(images/foto-2.jpg); background-position: center;"></div>
              <div class="carousel-caption textoEntrada">
                <h2>
-                 Verlos triunfar en la vida, es el mayor <span>anhelo de un padre,</span> ¡asegúrate hoy!
+                 Verlos triunfar en la vida, es el mayor <span>anhelo de un padre.</span>
                </h2>
              </div>
           </div>
@@ -96,7 +96,7 @@
         </div>
         <aside class="descargas">
           <a class="adjunto" href="adjuntos/seguropapa.pdf" target="_blank">
-            <span>Nombre de Archivo</span>
+            <span>Descargar folleto</span>
             <img src="images/pdf.png" alt="">
           </a>  
         </aside>
