--- a/app/index.html
+++ b/app/index.html
@@ -118,7 +118,7 @@
                   <!-- <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/NA8UWGa0aaE" frameborder="0" allowfullscreen></iframe> -->
                   <video id="example_video_1" class="video-js vjs-default-skin"
                     controls preload="auto" width="100%" height="264" autoplay >
-                   <source src="video/seguropapa.mp4" type='video/mp4' />
+                   <source src="https://raw.githubusercontent.com/oroborusm/papaseguro/master/app/video/seguropapa.mp4" type='video/mp4' />
                    <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
                   </video>
                 </div>
