--- a/app/index.html
+++ b/app/index.html
@@ -139,8 +139,8 @@
         <p><span class="destacadoFooter">Desde celulares</span> (32) 2326707</p>
       </div>
       <div class="fotosFooter pull-right">
-        <a href="mailto:agregacontacto@mutualdeseguros.cl"><span class="destacadoFooter">contacto</span>@mutualdeseguros.cl</a>
-      </div>
+          <p><span class="destacadoFooter bajas">Email: </span>contacto@mutualdeseguros.cl</p>
+        </div>
     </footer>
 
 
