--- a/app/papa-seguro.html
+++ b/app/papa-seguro.html
@@ -75,10 +75,12 @@
             <h1>Ventajas <span class="azulClaro">Seguro Papá</span></h1>
             <ul class="ventajas">
               <li>Es un seguro de vida diseñado especialmente para el Papá y sus hijos.</li>
+              <li>Permite asegurar la educación de tus hijos <span data-tabs="tabs"><a class="scrollchico letraChica" href="#cobertuas" data-toggle="tab">(Ver más)</a></span>.</li>
+              <li>Entrega la opción de incrementar tus ahorros con rentabilidad garantizada del 2% real.</li>
+              <li>Entrega una indemnización del 100% adicional en caso de Muerte Accidental <span data-tabs="tabs"><a class="scrollchico letraChica" href="#atributos" data-toggle="tab">(Ver más)</a></span>.</li>
+              <li>Entrega una indemnización de un 25% adicional por algunas de las causas de muerte más comunes en Chile <span data-tabs="tabs"><a class="scrollchico letraChica" href="#atributos" data-toggle="tab">(Ver más)</a></span>.</li>
               <li>Ofrece flexibilidad respecto al periodo de contratación, ofreciendo plazos renovables de 5, 10, 15 y 20 años o vitalicio.</li>
-              <li>Permite la incorporación de cláusulas adicionales para los hijos, tales como Cobertura de Reembolso de Gastos Funerarios y Cláusula de Ayuda Educacional.</li>
-              <li>Entrega una indemnización del 100% adicional en caso de Muerte Accidental y de un 25% por algunas de las causas de muerte más comunes en Chile.</li>
-              <li>Otorga una serie de Beneficios Adicionales Gratuitos para el titular y sus hijos*</li>
+              <li>Otorga una serie de Beneficios Adicionales Gratuitos especiales para el hombre <span data-tabs="tabs"><a class="scrollchico letraChica" href="#atributos" data-toggle="tab">(Ver más)</a></span>.</li>
             </ul>
 
             <p class="letraChica">La presente información sólo representa un resumen general de las coberturas, cuyo detalle y exclusiones correspondientes se encuentran comprendidos en la póliza POL220140416
@@ -92,15 +94,16 @@
           </div>
         </div>
         <div class="tabsBottom">
-          <ul id="tabs" class="nav nav-tabs nav-justified" data-tabs="tabs">
-              <li><a href="#red" data-toggle="tab">Atributos</a></li>
-              <li><a href="#orange" data-toggle="tab">Cobertura Opcionales</a></li>
-              <li><a href="#yellow" data-toggle="tab">Medios de Pago</a></li>
-              <li><a href="#green" data-toggle="tab">BAG</a></li>
+          <ul id="tabs" class="nav nav-tabs nav-justified caract" data-tabs="tabs">
+              <li><a class="scroll" href="#atributos" data-toggle="tab">Atributos</a></li>
+              <li><a class="scroll" href="#cobertuas" data-toggle="tab">Cobertura Opcionales</a></li>
+              <li><a class="scroll" href="#pagos" data-toggle="tab">Medios de Pago</a></li>
+              <li><a class="scroll" href="#beneficios" data-toggle="tab">BAG</a></li>
           </ul>
         </div>
-        <div id="my-tab-content" class="tab-content">
-            <div class="tab-pane contentTab" id="red">
+        <div id="my-tab-content scrollspy" class="tab-content">
+            <div class="objetivo"></div>
+            <div class="tab-pane contentTab" id="atributos">
                 <h2>Atributos</h2>
                 <p>La ventaja de este producto radica en sus coberturas exclusivas para el titular, que bonifican en un 25% adicional el capital asegurado, ante el fallecimiento del titular por las siguientes causas:</p>
                 <ul>
@@ -116,7 +119,7 @@
 cobertura es válida hasta el día que cumpla los 70 años de edad).</p>
             </div>
 
-            <div class="tab-pane contentTab" id="orange">
+            <div class="tab-pane contentTab" id="cobertuas">
                 <h2>Coberturas Opcionales</h2>
                 <p>Otra de las ventajas de este seguro es la opción de contratar una o más coberturas adicionales que se ajusten a sus necesidades</p>
                 <p><span class="azulClaro bold">Cláusula de Ahorro:</span> Permite ahorrar mensualmente "a la medida", sin costos de mantención ni cargos por aportes. La rentabilidad garantizada del ahorro es de
@@ -130,15 +133,22 @@ educación de su hijo, ante el fallecimiento del titular (cobertura válida hast
                   <span class="azulClaro bold">Cláusula de Reembolso de Servicios Funerarios:</span> Entrega un reembolso por los gastos en los servicios funerarios efectuados por el asegurado, ante la eventualidad del fallecimiento de un hijo.
                 </p>
             </div>
-            <div class="tab-pane contentTab" id="yellow">
+            <div class="tab-pane contentTab" id="pagos">
                 <h2>Medios de Pago</h2>
                 <ul>
                   <li>Descuento por planilla</li>
                   <li>Pago Automático de Cuentas (PAC)</li>
                   <li>Pago Automático con Tarjetas de Crédito (PAT)</li>
                 </ul>
+
+                <div class="pagos">
+                  <figure>
+                    <img src="images/webpay.png" alt="Pago por webpay">
+                    <figcaption>Recuerda que puedes realizar tus pagos y aportes de forma fácil, rápida y segura a través de Webpay.</figcaption>
+                  </figure>
+                </div>
             </div>
-            <div class="tab-pane contentTab" id="green">
+            <div class="tab-pane contentTab" id="beneficios">
                 <h2>Beneficios Adicionales Gratuitos.</h2>
                 <p>Mutual de Seguros contempla los siguientes beneficios gratuitos para este seguro, tanto para el titular como para los hijos incorporados al seguro.</p>
                 <div class="container">
@@ -153,63 +163,63 @@ educación de su hijo, ante el fallecimiento del titular (cobertura válida hast
                     <tbody>
                       <tr>
                         <td>Bonificación al Ahorro *</td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
                         <td></td>
                       </tr>
                       <tr>
                         <td>Atención de Consulta Médica Preventiva **</td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
                       </tr>
                       <tr>
                         <td>Intervención Quirúrgica</td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
                       </tr>
                       <tr>
                         <td>Intervención Quirúrgica producto de un Cáncer</td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
                         <td></td>
                       </tr>
                       <tr>
                         <td>Intervención Quirúrgica Dental</td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
                       </tr>
                       <tr>
                         <td>Natalidad</td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
                         <td></td>
                       </tr>
                       <tr>
                         <td>Odontológico</td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
                       </tr>
                       <tr>
                         <td>Oftalmológico</td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
                       </tr>
                       <tr>
-                        <td>Exámenes de diagnóstico de Cáncer Testicular</td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
+                        <td><span class="destacadoFooter capitulizar azulOscuro">Exámenes de diagnóstico de Cáncer Testicular</span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
                         <td></td>
                       </tr>
                       <tr>
-                        <td>Exámenes de Diagnóstico de Cáncer de Próstata</td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
+                        <td><span class="destacadoFooter capitulizar azulOscuro">Exámenes de Diagnóstico de Cáncer de Próstata</span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
                         <td></td>
                       </tr>
                       <tr>
                         <td>Odontológico para hijos ***</td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
                       </tr>
                       <tr>
                         <td>Plantillas Ortopédicas ***</td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
-                        <td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
                       </tr>
                     </tbody>
                   </table>
@@ -224,12 +234,7 @@ educación de su hijo, ante el fallecimiento del titular (cobertura válida hast
                 </div>
             </div>
         </div>
-        <div class="pagos">
-          <figure>
-            <img src="images/webpay.png" alt="Pago por webpay">
-            <figcaption>Recuerda que puedes realizar tus pagos y aportes de forma fácil, rápida y segura a través de Webpay.</figcaption>
-          </figure>
-        </div>
+        
       </section>
     </div>
 
@@ -243,7 +248,7 @@ educación de su hijo, ante el fallecimiento del titular (cobertura válida hast
           <p><span class="destacadoFooter">Desde celulares</span> (32) 2326707</p>
         </div>
         <div class="fotosFooter pull-right">
-          <a href="mailto:agregacontacto@mutualdeseguros.cl"><span class="destacadoFooter">contacto</span>@mutualdeseguros.cl</a>
+          <p><span class="destacadoFooter bajas">Email: </span>contacto@mutualdeseguros.cl</p>
         </div>
       </footer>
 
