--- a/app/index.html
+++ b/app/index.html
@@ -135,12 +135,12 @@
         <p>Molina N° 446, Valparaíso - Chile</p>
       </div>
       <div class="contacto">
-        <p><span class="destacadoFooter">Call Center</span> 600 626 7311</p>
-        <p><span class="destacadoFooter">Desde celulares</span> (32) 2326707</p>
+        <p><span class="destacadoFooter capitulizar">Call Center</span> 600 626 7311</p>
+        <p><span class="destacadoFooter capitulizar">Desde celulares</span> (32) 2326707</p>
       </div>
       <div class="fotosFooter pull-right">
-          <p><span class="destacadoFooter bajas">Email: </span>contacto@mutualdeseguros.cl</p>
-        </div>
+        <p><span class="destacadoFooter capitulizar">Email: </span>contacto@mutualdeseguros.cl</p>
+      </div>
     </footer>
 
 
