arreglo links ver mas

--- a/app/papa-seguro.html
+++ b/app/papa-seguro.html
@@ -80,7 +80,7 @@
               <li>Entrega una indemnización del 100% adicional en caso de Muerte Accidental <span data-tabs="tabs"><a class="scrollchico letraChica" href="#atributos" data-toggle="tab">(Ver más)</a></span>.</li>
               <li>Entrega una indemnización de un 25% adicional por algunas de las causas de muerte más comunes en Chile <span data-tabs="tabs"><a class="scrollchico letraChica" href="#atributos" data-toggle="tab">(Ver más)</a></span>.</li>
               <li>Ofrece flexibilidad respecto al periodo de contratación, ofreciendo plazos renovables de 5, 10, 15 y 20 años o vitalicio.</li>
-              <li>Otorga una serie de Beneficios Adicionales Gratuitos especiales para el hombre <span data-tabs="tabs"><a class="scrollchico letraChica" href="#atributos" data-toggle="tab">(Ver más)</a></span>.</li>
+              <li>Otorga una serie de Beneficios Adicionales Gratuitos especiales para el hombre <span data-tabs="tabs"><a class="scrollchico letraChica" href="#beneficios" data-toggle="tab">(Ver más)</a></span>.</li>
             </ul>
 
             <p class="letraChica">La presente información sólo representa un resumen general de las coberturas, cuyo detalle y exclusiones correspondientes se encuentran comprendidos en la póliza POL220140416
