--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>papaseguro</title>
+    <title>Seguro Papá</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
@@ -43,6 +43,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a class="botonMenu" href="index.html"><span>Inicio</span></a></li>
             <li><a class="botonMenu" href="papa-seguro.html"><span>Seguro Papá</span></a></li>
+            <li><a class="botonMenu" href="cobertura_oncologica.html"><span>Cobertura Oncológica</span></a></li>
           </ul>
         </nav>
       </header>
