--- a/app/papa-seguro.html
+++ b/app/papa-seguro.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>papaseguro</title>
+    <title>Seguro Papá - Ventajas</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
@@ -42,6 +42,7 @@
           <ul class="nav navbar-nav">
             <li><a class="botonMenu" href="index.html"><span>Inicio</span></a></li>
             <li class="active"><a class="botonMenu" href="papa-seguro.html"><span>Seguro Papá</span></a></li>
+            <li><a class="botonMenu" href="cobertura_oncologica.html"><span>Cobertura Oncológica</span></a></li>
           </ul>
         </nav>
       </header>
@@ -105,6 +106,7 @@
             <div class="objetivo"></div>
             <div class="tab-pane contentTab" id="atributos">
                 <h2>Atributos</h2>
+                <br>
                 <p>La ventaja de este producto radica en sus coberturas exclusivas para el titular, que bonifican en un 25% adicional el capital asegurado, ante el fallecimiento del titular por las siguientes causas:</p>
                 <ul>
                   <li>Accidente Vascular Encefálico</li>
@@ -121,6 +123,7 @@ cobertura es válida hasta el día que cumpla los 70 años de edad).</p>
 
             <div class="tab-pane contentTab" id="cobertuas">
                 <h2>Coberturas Opcionales</h2>
+                <br>
                 <p>Otra de las ventajas de este seguro es la opción de contratar una o más coberturas adicionales que se ajusten a sus necesidades</p>
                 <p><span class="azulClaro bold">Cláusula de Ahorro:</span> Permite ahorrar mensualmente "a la medida", sin costos de mantención ni cargos por aportes. La rentabilidad garantizada del ahorro es de
 U.F. + 2% anual, permitiendo realizar giros, los cuales quedarán liberados de cargos a partir del quinto año de vigencia de la cláusula. El retiro total o parcial del
@@ -135,6 +138,7 @@ educación de su hijo, ante el fallecimiento del titular (cobertura válida hast
             </div>
             <div class="tab-pane contentTab" id="pagos">
                 <h2>Medios de Pago</h2>
+                <br>
                 <ul>
                   <li>Descuento por planilla</li>
                   <li>Pago Automático de Cuentas (PAC)</li>
@@ -150,6 +154,7 @@ educación de su hijo, ante el fallecimiento del titular (cobertura válida hast
             </div>
             <div class="tab-pane contentTab" id="beneficios">
                 <h2>Beneficios Adicionales Gratuitos.</h2>
+                <br>
                 <p>Mutual de Seguros contempla los siguientes beneficios gratuitos para este seguro, tanto para el titular como para los hijos incorporados al seguro.</p>
                 <div class="container">
                   <table class="table table-hover">
