--- a/app/cobertura_oncologica.html
+++ b/app/cobertura_oncologica.html
@@ -76,6 +76,7 @@
             <h1>Descripción <span class="azulClaro">General</span></h1>
             <br>
             <p>Es una cobertura opcional adicional a la póliza, que brinda atención oncológica para el tratamiento de todo tipo de cáncer, en el <span class="azulOscuro">Instituto de Radio Medicina de Chile</span> <span class="azulClaro">IRAM.</span></p>
+            <img class="iram" src="images/iram.png">
           </div>
         </div>
         <div class="tabsBottom">
